--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <name>webui-ros-joystick</name>
   <version>0.0.1</version>
   <description>The webui-ros-joystick package allows user to send velocity commands to robot through web interface.</description>
-  <maintainer email="lukasz.mitka@husarion.com">Łukasz Mitka</maintainer>
+  <maintainer email="contact@husarion.com">Husarion</maintainer>
   <license>MIT</license>
 
   <author email="lukasz.mitka@husarion.com">Łukasz Mitka</author>
