add package.xml dep

--- a/webui-ros-joystick/package.xml
+++ b/webui-ros-joystick/package.xml
@@ -8,5 +8,9 @@
 
   <author email="lukasz.mitka@husarion.com">Łukasz Mitka</author>
   <buildtool_depend>catkin</buildtool_depend>
+  <exec_depend>roslaunch</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
 
 </package>
