--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,12 +14,15 @@ confinement: strict # use 'strict' once you have the right plugs and slots
 parts:
   webui-ros-joystick:
     plugin: catkin
-    source: https://github.com/giusebar/webui-ros-joystick.git
-    source-branch: add_package_dependencies
+    source: https://github.com/husarion/webui-ros-joystick.git
+    source-branch: master
     build-packages:
       - npm
     stage-packages:
       - ros-noetic-roslaunch
+      - ros-noetic-geometry-msgs
+      - ros-noetic-std-msgs
+      - ros-noetic-std-srvs
     override-build: |
       snapcraftctl build
       npm install --prefix ${SNAPCRAFT_PART_INSTALL} rosnodejs@3.0.2 socket.io@2.4.1 yargs@16.2.0 express@4.17.1
